# ffmpegtools

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/gyso/ndklearnapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFMPEGtools.cpp  FFMPEGtools.h  GySoPlayer.cpp  GySoPlayer.h  VideoChannel.cpp  VideoChannel.h  ffTool.h  macro.h  native-lib.cpp
app/src/main/java/com/gyso/ndklearnapplication/: AssetsVideoStreamDecoder.java  AssetsVideoStreamPusher.java  BitmapUtils.java  ExtractMpegFramesTest.java  GysoFfmpegTools.java  GysoFfmpegTools.kt  H264SpsParser.java  MainActivity.kt  NdkLearnApplication.kt  PermissionUtil.kt  VideoRendererView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gyso/ndklearnapplication/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
videohandlerlib/: build.gradle.kts
videohandlerlib/src/main/cpp/: CMakeLists.txt  GySoPlayer.cpp
videohandlerlib/src/main/java/com/gyso/videohandlerlib/: GysoFfmpegTools.java
